WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135898
REGRESSION (
r172326
): Dashed/dotted borders do not paint.
https://bugs.webkit.org/show_bug.cgi?id=135898
Summary
REGRESSION (r172326): Dashed/dotted borders do not paint.
Joseph Pecoraro
Reported
2014-08-13 13:09:19 PDT
* SUMMARY Metrics pane is missing dashed borders. Caused by: <
http://trac.webkit.org/changeset/172326
> * STEPS TO REPRODUCE 1. Inspect apple.com 2. Select <body> in DOM tree 3. Select Styles detail navigator in right sidebar 4. Select Metrics tab in Styles detail navigator => missing dashed borders (around the entire edge and between border and padding) * NOTES - devicePixelRatio = 1 on this machine
Attachments
[TEST] Reduction
(501 bytes, text/html)
2014-08-14 13:18 PDT
,
Joseph Pecoraro
no flags
Details
Patch
(67.42 KB, patch)
2014-08-19 13:52 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(67.50 KB, patch)
2014-08-20 06:56 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-08-13 13:09:28 PDT
<
rdar://problem/18009437
>
Joseph Pecoraro
Comment 2
2014-08-14 13:18:53 PDT
Created
attachment 236613
[details]
[TEST] Reduction Here is a simple reduction= showing the issue.
alan
Comment 3
2014-08-19 13:52:15 PDT
Created
attachment 236822
[details]
Patch
Simon Fraser (smfr)
Comment 4
2014-08-19 13:56:22 PDT
Comment on
attachment 236822
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=236822&action=review
> LayoutTests/fast/borders/border-painting-dashed-at-all-expected.html:19 > + for (i = 1; i < 10; ++i) {
var i
alan
Comment 5
2014-08-20 06:56:28 PDT
Created
attachment 236869
[details]
Patch
WebKit Commit Bot
Comment 6
2014-08-20 07:45:11 PDT
Comment on
attachment 236869
[details]
Patch Clearing flags on attachment: 236869 Committed
r172797
: <
http://trac.webkit.org/changeset/172797
>
WebKit Commit Bot
Comment 7
2014-08-20 07:45:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug